--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,15 @@
 name = "Replicator_Mutator_Eq"
 authors = ["Maria Alejandra Ramirez"]
-[compat]
-julia = "1.7.0"
-DrWatson = "2.9.1"
+
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+
+[compat]
+DrWatson = "2.9.1"
+julia = "1.7.0"
